Implement specialty styles and formatting for recipes, illustrated lists, and epigraphs

--- a/content/1-history/2.md
+++ b/content/1-history/2.md
@@ -68,6 +68,7 @@ The concepts discussed in this section are often studied using a technique calle
 The purpose of using tensile test data in studies of artists paints is due to the interest in characterizing their large-strain response, particularly the failure criteria as a function of time and temperature. The related research work of Thor Smith in the 1960s is of interest since it shows the application of TTS to the ultimate properties of plastics and elastomers. Smith clearly summarizes an important finding in one of his many papers on this topic:
 
 > The ultimate tensile properties (the stress at break σ~b~, and the corresponding extension ratio λ~b~) vary markedly with the temperature and with the stress-time or strain-time history prior to rupture. Considerable evidence indicates that data obtained at different temperatures can often be superposed to give master curves which show the variation of σ~b~ and λ~b~ over many decades of time at a fixed temperature. Further, the temperature shift factor is the same—or nearly the same—as that used to superpose viscoelastic data representing small-deformation behavior. In other words, the same molecular parameters which influence chain mobility, thus the time and temperature dependence of linear viscoelastic response, also have a controlling effect on the time and temperature dependence of the ultimate tensile properties. ({% cite 'Smith 1965' '275' %})
+{.blockquote-plain}
 
 Recent studies on artists paints have highlighted the application of this approach for generating master curves of failure strains from tensile data. ([fig. 2.7a](#fig-2-7)) shows a generalized illustration of a failure envelope created using a similar approach to that shown for modulus data (see [fig. 2.5](#fig-2-5)). The path to point A results in failure before reaching the target strain at the defined strain rate. Reducing the strain rate avoids failure for the path to point B, which is outside of the failure envelope. ([fig. 2.7b](#fig-2-7)) shows the path to point C outside of the failure envelope due to a horizontal shift of the master curve from a temperature increase or possibly a plasticizing effect (e.g., increased moisture content). Combining higher temperature and reduced strain rate locates point D even further from the failure line.
 
