--- a/content/4-case-studies/22.md
+++ b/content/4-case-studies/22.md
@@ -126,11 +126,9 @@ I would like to express my sincerest thanks to the Getty Foundation for its gene
 
 ### Materials List
 
-Eltoline tissue, long-staple 100% manila fibers with good wet strength.
-
-Resin ‘W’, Evo Stik wood adhesive, Bostik Ltd., UK
-
-Mowiol GE 04-86 (polyvinyl alcohol), Kuraray Europe GmbH
+- Eltoline tissue, long-staple 100% manila fibers with good wet strength.
+- Resin ‘W’, Evo Stik wood adhesive, Bostik Ltd., UK
+- Mowiol GE 04-86 (polyvinyl alcohol), Kuraray Europe GmbH
 
 ### Recipes
 
