--- a/content/4-case-studies/23.md
+++ b/content/4-case-studies/23.md
@@ -125,66 +125,45 @@ Each length of stabilized panorama was rolled onto a storage drum with the lead 
 
 ### Stabilization Fabrics
 
-Desized, unbleached, scoured, cotton print cloth, style #400 U: Testfabrics, Inc.
-
-    No resin finishes
-
-    Approx. weight: 3.18 oz./sq. yd.
-
-    Approx. width: 44 in.
-
-    Approx. same weight and thread count as Panorama fabric
-
-20 denier nylon bobbinet, style N800: Dukeries Textiles & Fancy Goods, Ltd.
-
-    Mesh size approximately 1/16 in. diameter
-
-    Width: 205–213 in.
-
-    30 warps/in.
-
-    2 diagonal wefts: 24 wefts/in.
+- Desized, unbleached, scoured, cotton print cloth, style #400 U: Testfabrics, Inc.
+    - No resin finishes
+    - Approx. weight: 3.18 oz./sq. yd.
+    - Approx. width: 44 in.
+    - Approx. same weight and thread count as Panorama fabric
+- 20 denier nylon bobbinet, style N800: Dukeries Textiles & Fancy Goods, Ltd.
+    - Mesh size approximately 1/16 in. diameter
+    - Width: 205–213 in.
+    - 30 warps/in.
+    - 2 diagonal wefts: 24 wefts/in.
 
 ### Threads
 
-Gütermann Skala 360 sewing thread: Testfabrics, Inc.
-
-    Extra fine tex 8
-
-    100% polyester sewing thread
-
-Coats cotton-covered polyester core sewing thread: locally purchased
-
-    35 weight
+- Gütermann Skala 360 sewing thread: Testfabrics, Inc.
+    - Extra fine tex 8
+    - 100% polyester sewing thread
+- Coats cotton-covered polyester core sewing thread: locally purchased
+    - 35 weight
 
 ### Dyes
 
-Pro MX Fiber Reactive Dye: Pro Chemical and Dye
-
-    Designed to permanently dye cellulose fibers
-
-    Excellent wash and light fastness properties
-
-Pro Washfast Acid Dye: Pro Chemical & Dye
-
-    Designed to permanently dye protein and nylon fibers
-
-    Excellent wash and light fastness properties
+- Pro MX Fiber Reactive Dye: Pro Chemical and Dye
+    - Designed to permanently dye cellulose fibers
+    - Excellent wash and light fastness properties
+- Pro Washfast Acid Dye: Pro Chemical & Dye
+    - Designed to permanently dye protein and nylon fibers\
+    - Excellent wash and light fastness properties
 
 ### Rope
 
-100% cotton, three-strand rope, 3/16 in. diameter: manufactured by Bohannon Textiles Inc; purchased from R&W Rope, New Bedford, MA
+- 100% cotton, three-strand rope, 3/16 in. diameter: manufactured by Bohannon Textiles Inc; purchased from R&W Rope, New Bedford, MA
 
 ### Gelatin
 
-Technical grade, 200 Bloom, Type B, 40 mesh gelatin: Polistini Conservation Material
+- Technical grade, 200 Bloom, Type B, 40 mesh gelatin: Polistini Conservation Material
 
 ### Storage Drum Materials
 
-24 in. Sonotube: locally purchased
-
-Mylar film, 4 mil: Talas, Inc.
-
-Volara foam, 1/16 in.: Talas, Inc.
-
-3M 415 double-sided tape and 3M 850 tape: Talas, Inc.
+- 24 in. Sonotube: locally purchased
+- Mylar film, 4 mil: Talas, Inc.
+- Volara foam, 1/16 in.: Talas, Inc.
+- 3M 415 double-sided tape and 3M 850 tape: Talas, Inc.
