--- a/content/6-interventions/33.md
+++ b/content/6-interventions/33.md
@@ -39,10 +39,12 @@ The rehousing of the V&A’s reserve collection from premises in West London to 
 The first curator of paintings at the SKM, Richard Redgrave (1804–1888), had a protocol for dealing with newly acquired paintings that we would now describe as preventive conservation ({% cite 'Costaras 2013' %}). Redgrave’s acquisition procedure involved cleaning the reverse of paintings, as well as the front, and putting a backing on the frame. A few years later, putting glass in the frames became a policy. During the years that I have worked at the V&A, a great many of the paintings in the collection have passed through the studio, and I have had the opportunity to observe their condition. It is striking how many canvases are unlined. I noted, thanks to helpful labels on the reverse, that the treatment of almost all the paintings that were lined was carried out in the 1890s or early 1900s by F. Haines & Sons (more of Haines & Sons later). Redgrave described the state of the Sheepshanks paintings on their acquisition in 1856:
 
 > When in the spring of last year the pictures were given over to the Department, the greater number had been left, during the years they had been in Mr. Sheepshanks’ possession, in the state in which they had been purchased direct from the studios of the various artists or elsewhere…and all had gradually accumulated dirt and discoloration on their surface, and much dust behind the canvases (a source of mischief too often neglected). ({% cite 'Committee of Council on Education 1858' '64' %})
+{.blockquote-plain}
 
 Redgrave went on to describe the measures taken after the dirt had been removed from front and back:
 
 > In order to secure the picture on canvas from the injury arising from the accumulation of dust behind them, they have all been protected by painted canvas stretched over them, so as to exclude both damp and dust.” ({% cite 'Committee of Council on Education 1858' '65' %})
+{.blockquote-plain}
 
 The painted canvas backing has the appearance of imitation leather, it was stretched over the reverse of the painting and tacked to the back of the frame. Narrow wooden fillets were pinned along the edges to improve the seal. An example of this method can be seen on a painting by Johann Gottfried Steffan (1815–1905), *The Torrent,* 1844/1848 (1545–1869), and probably dates from 1869, the year it was acquired ([fig. 33.2](#fig-33-2)).
 
