--- a/content/8-posters/42.md
+++ b/content/8-posters/42.md
@@ -61,6 +61,7 @@ Beva 371 (Berger’s ethylene vinyl acetate) was first formulated in 1970 and pr
 In his 1995 FAIC interview, Berger noted:
 
 > The movement against lining is foolish. I have shown, through my experiments and lining demonstrations, that I can line butterflies. For if you can line a butterfly, then really I don't think you would damage a painting when you line it. So paintings can be lined without damaging them. You only have to know how, and to do it properly, and have the right materials.[^7]
+{.blockquote-plain}
 
 Berger had the verso of the butterfly collage on canvas serve as the top of the vacuum envelope.
 
@@ -73,6 +74,7 @@ New terminology and key personalities emerged at Greenwich. Caroline Villers not
 In ICOM-CC’s 1972 triennial meeting, in Madrid, Vishwa Raj Mehra (b. 1931) had presented a radical review of lining methodology, in which he began to argue for a more graduated approach to structural treatment and to question assumptions about the cohesive strength required of lining adhesives and the tensile forces in the painting composite. Percival-Prescott wrote in 2003:
 
 > The atmosphere in the Greenwich Conference will never be forgotten and led to many substantial developments … One of the greatest of these was Vishwa Mehra’s low-pressure cold table; this invention took its place in lining history and was to be copied extensively throughout the world, including for use with paper and textile conservation. Mehra had brought a prototype lining table, transported specially to the conference in order to demonstrate lining with Plextol B500 cold-setting adhesive and woven polypropylene fabric. ({% cite 'Percival-Prescott 2003a' 'ix' %})
+{.blockquote-plain}
 
 Robert Fieux (1919–1991) ([fig. 42.5](#fig-42-5)) presented a paper at Greenwich reporting on a meeting in Cooperstown, New York, in summer 1973, hosted by Sheldon and Caroline Keck, comparing wax resin, glue paste, Beva, and polyvinyl acetate. Fieux gave papers in Ottawa 1976 and at ICOM-CC 1978, in Zagreb, on “Electrostatic Cling as a Pressure Source in Lining of Paintings.” He invented Fabri-Sil linings: silicone adhesive on Teflon-coated fiberglass fabric, which required only gentle hand pressure for attachment. This seemingly gentle technique was adopted at New York’s Metropolitan Museum and the Museum of Fine Arts, Boston, for a time, but was later abandoned.
 
