--- a/content/8-posters/63.md
+++ b/content/8-posters/63.md
@@ -71,9 +71,9 @@ The residual chlorine CI values were measured using X-ray fluorescence spectrosc
 
 The target work was an acrylic painting by Masayoshi Nameki (figs. [63.6](#fig-63-6), [63.7](#fig-63-7)). The canvas had already been removed from the original stretcher. Polyester strips were attached to the edges of the canvas (strip-lining) and it was remounted on a larger stretcher. The size of the canvas was recorded before applying water, and then the desalination process was carried out.
 
-{% figure 'fig-63-6' %}
+{% figuregroup '2' 'fig-63-6, fig-63-7' %}
 
-{% figure 'fig-63-7' %}
+<div class="illustrated-list">
 
 1.  Water mixed with ethyl alcohol was sprayed onto the back of the canvas to apply moisture to the entire surface ([fig. 63.8](#fig-63-8)).
 
@@ -97,11 +97,13 @@ The target work was an acrylic painting by Masayoshi Nameki (figs. [63.6](#fig-6
 
     {% figure 'fig-63-12' %}
 
-    {% figure 'table-63-1' %}
+    {% figure 'table-63-1' 'is-table-scale-4' %}
 
 7.  Canvas shrinkage was recorded directly after each application of water, after the desalination process was totally finished, and the following day, when the canvas had dried ([fig. 63.13](#fig-63-13)).
 
     {% figure 'fig-63-13' %}
+
+</div>
 
 ## Conclusion and Future Issues
 
